@@ -1,3 +1,11 @@
+2007-12-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/clutter-tut.xml: Effects section, Behaviours section:
+	Mention the effects are a simple wrapper around Behaviours, and say when 
+	they are not enough.
+	Remind people to unref the effect template. 
+	* examples/effects/main.c: (main): Unref the effect template.
+
 2007-12-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/full_example/main.c: Limit angles to less than 360, 
